# 28-2-simulation-of-the-station

./: CMakeLists.txt  README.md
include/: functions.h  train.h
src/: CMakeLists.txt  main.cpp  train.cpp
